--- a/index.html
+++ b/index.html
@@ -8,6 +8,110 @@
     <link rel="stylesheet" href="./Resources/CSS/style.css">
 </head>
 <body>
-    
+    <header>
+        <div><img id="logo" src="./Resources/images/ic-logo.svg"><p>COLMARACADEMY</p></div>
+        <nav><ul>
+            <li><a href="">On Campus</a></li>
+            <li><a href="">Online</a></li>
+            <li><a href="">Our Companies</a></li>
+            <li><a href="">Sign in</a></li>
+        </ul></nav>
+    </header>
+    <main>
+        <div>
+            <img src="./Resources/images/banner.jpg" alt="">
+            <h1>Learn something new everyday</h1>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <button>Start here</button>
+        </div>
+        <div>
+            <img src="./Resources/images/information-main.jpg" alt="">
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <p>Emmanuel, Sr Strategist at Hiring.com</p>
+        </div>
+        <div>
+            <div>
+                <img src="./Resources/images/information-orientation.jpg" alt="">
+                <h2>Orientation date</h2>
+                <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                <p><a href="">Read more</a></p>
+            </div>
+            <div>
+                <img src="./Resources/images/information-campus.jpg" alt="">
+                <h2>Our campus</h2>
+                <p>Find which campus is close by you</p>
+                <p><a href="">Read more</a></p>
+            </div>
+            <div>
+                <img src="./Resources/images/information-guest-lecture.jpg" alt="">
+                <h2>Our Guest Lecture</h2>
+                <p>Join a Keynote with Oliver Sack about music in medical treatment</p>
+                <p><a href="">Read more</a></p>
+            </div>
+        </div>
+        <div>
+            <h1>Start learning</h1>
+            <div>
+                <img src="./Resources/images/course-software.jpg" alt="">
+                <h2>Software engineering</h2>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div>
+                <img src="./Resources/images/course-computer-art.jpg" alt="">
+                <h2>Computer art</h2>
+                <p>COURSES</p>
+                <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+            <div>
+                <img src="./Resources/images/course-design.jpg" alt="">
+                <h2>Design</h2>
+                <p>COURSES</p>
+                <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+            <div>
+                <img src="./Resources/images/course-data.jpg" alt="">
+                <h2>Data</h2>
+                <p>COURSES</p>
+                <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+            <div>
+                <img src="./Resources/images/course-business.jpg" alt="">
+                <h2>Business</h2>
+                <p>COURSES</p>
+                <p>Product Development, Business Development, Startup</p>
+            </div>
+            <div>
+                <img src="./Resources/images/course-marketing.jpg" alt="">
+                <h2>Marketing</h2>
+                <p>COURSES</p>
+                <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+        </div>
+        <div>
+            <h1>Thesis exhibit</h1>
+            <div><video src="./Resources/videos/thesis.mp4" controls></video>
+            <h2>Reimagine urban</h2>
+            <p>'Curabitur vitae libero in ipsum porttitor consequeat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequeat, tristique ligula."</p>
+        </div>
+        <div>
+            <div>
+                <img src="./Resources/images/thesis-fisma.jpg" alt="">
+                <h2>Fisma: Design and Prototype</h2>
+                <p>Designer showcase of new prototype product</p>
+            </div>
+            <div>
+                <img src="./Resources/images/thesis-now-and-then.jpg" alt="">
+                <h2>Now and then</h2>
+                <p>Research study about New York</p>
+            </div>
+        </div>
+        </div>
+    </main>
+    <footer>
+        <p>©2016 Colmar Academy. All Rights reserved</p>
+        <div><p><a href="">Terms</a></p><p><a href="">Privacy</a></p></div>
+    </footer>
 </body>
 </html>
